fix discovery service IT by adding resteasy client dependency